# Private-Pay

./: .env.backup  .env.example  .gitignore  .relayer_state.json  APTOS_INTEGRATION_MERMAID.md  ARCIUM_INTEGRATION_MERMAID.md  AXELAR_FIXES_SUMMARY.md  AXELAR_INTEGRATION.md  AXELAR_INTEGRATION_MERMAID.md  AZTEC_FLOWS.md  AZTEC_INTEGRATION_MERMAID.md  COMPLETION_REPORT_100_PERCENT.md  FINAL_IMPLEMENTATION_REPORT.md  FUNCTIONALITY_VERIFICATION_REPORT.md  HELIUS_SOLANA_ZCASH_BRIDGE.md  IMPLEMENTATION_STATUS_REPORT.md  KIRO_SHOWCASE.md  KIRO_USAGE.md  MIDEN_INTEGRATION_MERMAID.md  MINA_INTEGRATION_MERMAID.md  OSMOSIS_INTEGRATION_DESIGN.md  OSMOSIS_INTEGRATION_MERMAID.md  README.md  SOLANA_HELIUS_INTEGRATION_MERMAID.md  STARKNET_INTEGRATION.md  STARKNET_ZTARKNET_INTEGRATION_MERMAID.md  ZCASH_CORE_MERMAID.md  check_ausdc.js  eslint.config.js  jest.config.js  package-lock.json  package.json  vercel.json  vite.config.js
.history/: RELAYER_README_20251217104027.md  package_20251217104950.json
aptos/: CONTRACTS_ADDED.md  CONTRACTS_DOCUMENTATION.md  FEATURE_COMPARISON.md
axelar/: ARCHITECTURE.md  CONTRACT_INTERNALS.md  DEPLOYMENT_GUIDE.md  FRONTEND_INTEGRATION.md  ITS_STEALTH_UPDATES.md  README.md
aztec/: README.md  package.json
backend/: .env.example  README.md  index.js  package-lock.json  package.json
docs/: BRIDGE_ARCHITECTURE.md  BridgeFeature.md  DEPLOYMENT.md  ENVIRONMENT_SETUP.md  HELIUS_SOLANA_ZCASH_BRIDGE.md  IMPLEMENTATION_STATUS.md  STABLECOIN_DESIGN.md  ZcashMinaBridge.md  (+2 more)
solana/programs/zcash_bridge/: Cargo.toml
solana/programs/zcash_bridge/src/: lib.rs
(+284 files in other folders)
